@@ -1396,6 +1396,7 @@ XML element:
 
     <token-set name="jumps">
       <param name="comment" value="Traffic rate jumps" />
+      <param name="rrgraph-view" value="lastweek-small"/>
     </token-set>
 
     <token-set name="hw-failures">
@@ -1414,6 +1415,12 @@ The following parameters are mandatory for tokensets:
 =item * C<default-tset-view>
 
 Determines the view for displaying the tokenset contents.
+
+=item * C<rrgraph-view>
+
+Specifies the name of the view that is used to display graphs inside the
+tokenset. If not specified, the first view in C<rrgraph-views> from each
+leaf is used to display the graph.
 
 =item * C<comment>
 
